--- a/demos/src/app/view-assets/view-assets.page.html
+++ b/demos/src/app/view-assets/view-assets.page.html
@@ -8,313 +8,93 @@
 </ion-header>
 
 <ion-content padding>
-  <!-- <ion-button (click)='presentAlert()'>Show Alert</ion-button> -->
 
-
-  <form novalidate [formGroup]="formGroup" *ngIf='!showResults'>
-      <span (click)='hideAtLeastOneMsg()'>
-          <ion-item lines='none' *ngIf='formGroup.touched && !formGroup.valid && !userHasCancelled &&!(formGroup.controls["rardDateUseRangeEnd"].value!=="" && formGroup.controls["rardDateUseRangeStart"].value==="" )'>
-            <ion-label color="danger">
-              Input for at least one field is required
-            </ion-label>
-            <ion-icon name='close'></ion-icon>
-          </ion-item>
-        </span>
-
-    <div id="custom-overlay" [style.display]="showSearchingOverlay ? 'flex': 'none'">
-      <div class="flb">
-        <div class="lds-ellipsis">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-      </div>
-    </div>
-    <!-- <ion-item > 
-<ion-label>Asset Type</ion-label>
-<ion-select placeholder="Select One" >
-<ion-select-option *ngFor='let assetType of uniqueAssetType' value="{{assetType}}">{{assetType}}</ion-select-option>
-</ion-select>
-</ion-item> -->
-<ion-input clearInput type="text" formControlName="rardSerialNo" placeholder="Serial No."></ion-input>
-    <ion-input clear-input='true' type="text" formControlName="rardOwner" placeholder="Owner"></ion-input>
-    <ion-input clearInput type="text" formControlName="rardDetailedVehicleType" placeholder="Detailed Vehicle Type">
-    </ion-input>
-
-    <ion-input clearInput type="text" formControlName="rardAssetType" placeholder="Asset Type"></ion-input>
-    <ion-input clearInput type="text" formControlName="rardYearOfManufacture" placeholder="Year of Manufacture | YY ">
-    </ion-input>
-<!--     <ion-list>
-        <ion-item>
-          <ion-range color="danger" pin="true"></ion-range>
-        </ion-item> -->
-      
-        <ion-item lines='none'>
-          <ion-label>Range</ion-label>
-        <ion-range [disabled]='formGroup.controls["rardYearOfManufacture"].value.length>0' formControlName='rardYearOfManufactureRange' dualKnobs="true" pin='true' min="00" max="99" color="primary">
-            <ion-label slot="start">00</ion-label>
-            <ion-label slot="end">99</ion-label>
-          </ion-range>
-        </ion-item>
-      
-      <!--  <ion-item>
-         <ion-range min="20" max="80" step="2">
-           <ion-icon size="small" slot="start" name="sunny"></ion-icon>
-           <ion-icon slot="end" name="sunny"></ion-icon>
-         </ion-range>
-       </ion-item>
-      
-        <ion-item>
-          <ion-range min="1000" max="2000" step="100" snaps="true" color="secondary"></ion-range>
-        </ion-item>
-      
-        <ion-item>
-          <ion-range dualKnobs="true" min="21" max="72" step="3" snaps="true"></ion-range>
-        </ion-item>
-      </ion-list> -->
-    <!--<ion-item lines='none'>
-<ion-input clearInput type="text" formControlName="yearOfManufacture" placeholder="Year of Manufacture"></ion-input>
-<ion-button fill='clear'>Range</ion-button>
-</ion-item> -->
-
-    <!-- <ion-input clearInput type="text" formControlName="rardDateUse" placeholder="Date put into Use || YYYY-MM-DD"></ion-input> -->
-    <!-- <ion-item> -->
-      <!-- <ion-label>Date</ion-label> -->
-      <ion-datetime placeholder="Date put into Use" display-format="DD MMM YYYY" picker-format="DD MMM YYYY" formControlName="rardDateUse" [pickerOptions]="customOptions"></ion-datetime>
-    <!-- </ion-item> -->
-    <span>
-        <ion-item lines='none' *ngIf='formGroup.touched && (formGroup.controls["rardDateUseRangeEnd"].value!=="" && formGroup.controls["rardDateUseRangeStart"].value==="" )'>
+    <span (click)='hideAtLeastOneMsg()'>
+        <ion-item lines='none'
+          *ngIf='formGroup.touched && !formGroup.valid && !userHasCancelled &&!(formGroup.controls["rardDateUseRangeEnd"].value!=="" && formGroup.controls["rardDateUseRangeStart"].value==="" )'>
+          <!-- this should not show when date range error is there -->
           <ion-label color="danger">
-            Start Date Required with End Date.
+            Input for at least one field is required.
           </ion-label>
           <ion-icon name='close'></ion-icon>
         </ion-item>
       </span>
-    <ion-item lines='none' [disabled]='formGroup.controls["rardDateUse"].value!==""'>
-      
-      <ion-label>Range</ion-label>
-      <ion-datetime placeholder='Start Date' formControlName="rardDateUseRangeStart"></ion-datetime>
-      <ion-datetime placeholder='End Date' formControlName="rardDateUseRangeEnd"></ion-datetime>
-    </ion-item>
-    <ion-input clearInput type="text" formControlName="rardVehicleManufacturerCode"
-      placeholder="Vehicle Manufactire's Code/Vendor Code"></ion-input>
 
-        <ion-row style="height: 30px"></ion-row>
+      <div id="custom-overlay" [style.display]="showSearchingOverlay ? 'flex': 'none'">
+          <div class="flb">
+            <div class="lds-ellipsis">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+        </div>
+
+  <form novalidate [formGroup]="formGroup" *ngIf='!showResults'>
+    <ion-input clearInput type="text" formControlName="serialNo" placeholder="Serial No."></ion-input>
+
+    <ion-input clear-input='true' type="text" formControlName="owner" placeholder="Owner"></ion-input>
+
+    <!-- <ion-input clearInput type="text" formControlName="rardDetailedVehicleType" placeholder="Detailed Vehicle Type | F"></ion-input> -->
+
+    <ion-input clearInput type="text" formControlName="assetType" placeholder="Asset Type"></ion-input>
+
+    <ion-input clearInput type="text" formControlName="yearOfManufacture" placeholder="Year of Manufacture | YY ">
+    </ion-input>
+
+    <ion-item lines='none'>
+      <ion-label>Range</ion-label>
+      <ion-range [disabled]='formGroup.controls["yearOfManufacture"].value.length>0'
+        formControlName='yearOfManufactureRange' dualKnobs="true" pin='true' min="00" max="99" color="primary">
+        <ion-label slot="start">00</ion-label>
+        <ion-label slot="end">99</ion-label>
+      </ion-range>
+    </ion-item>
+
+    <ion-datetime placeholder="Date put into Use" display-format="DD MMM YYYY" picker-format="DD MMM YYYY"
+      formControlName="dateUse" [pickerOptions]="customOptions"></ion-datetime>
+
+    <span>
+      <ion-item lines='none'
+        *ngIf='formGroup.touched && (formGroup.controls["dateUseRangeEnd"].value!=="" && formGroup.controls["dateUseRangeStart"].value==="" )'>
+        <ion-label color="danger">
+          Start Date Required with End Date.
+        </ion-label>
+        <ion-icon name='close'></ion-icon>
+      </ion-item>
+    </span>
+
+    <ion-item lines='none' [disabled]='formGroup.controls["dateUse"].value!==""'>
+      <ion-label>Range</ion-label>
+      <ion-datetime placeholder='Start Date' formControlName="dateUseRangeStart"></ion-datetime>
+      <ion-datetime placeholder='End Date' formControlName="dateUseRangeEnd"></ion-datetime>
+    </ion-item>
+
+    <ion-input clearInput type="text" formControlName="gs1CompanyCode" placeholder="Vehicle Manufactire's Code/Vendor Code"></ion-input>
+
+    <ion-row style="height: 30px"></ion-row>
   </form>
 
-
-
-  <ngx-datatable *ngIf='showResults' 
-  class='material striped' 
-  [rows]="searchedItems" 
-  [columns]="columns" 
-  [scrollbarH]="true"
-    [headerHeight]="50" 
-    [footerHeight]="50" 
-    [rowHeight]="'auto'" 
-    [columnMode]="'force'"
+  <ngx-datatable *ngIf='showResults' class='material striped' [rows]="searchedItems" [columns]="columns"
+    [scrollbarH]="true" [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [columnMode]="'force'"
     [limit]="10">
   </ngx-datatable>
 
-  <ngx-datatable *ngIf='false'
-  class="material fullscreen striped" 
-   
-  [rows]="items" 
-  [scrollbarH]="true"
-  [headerHeight]="50" 
-  [footerHeight]="30" 
-  [rowHeight]="'auto'" 
-
-  [limit]="3">
-  <ngx-datatable-column name="assetType" >
-    <ng-template let-value="value" ngx-datatable-cell-template>
-    <strong>{{value}}</strong>
-    </ng-template>
-  </ngx-datatable-column>
-  <ngx-datatable-column name="yearOfManufacture"><strong>{{value}}</strong></ngx-datatable-column>
-  <ngx-datatable-column name="owner"><strong>{{value}}</strong></ngx-datatable-column>
-  <ngx-datatable-column name="detailedVehicleType"><strong>{{value}}</strong></ngx-datatable-column>
-  <ngx-datatable-column name="serialNumber"><strong>{{value}}</strong></ngx-datatable-column>
-  <ngx-datatable-column name="datePutIntoUse"><strong>{{value}}</strong></ngx-datatable-column>
-  <ngx-datatable-column name="vendorCode"><strong>{{value}}</strong></ngx-datatable-column>
-   --><!-- <ngx-datatable-footer> -->
-<!--       <ng-template 
-        ngx-datatable-footer-template 
-        let-rowCount="rowCount"
-        let-pageSize="pageSize"
-        let-selectedCount="selectedCount"
-        let-curPage="curPage"
-        let-offset="offset">
-        <div style="padding: 5px 10px">
-          <div>
-            <strong>Summary</strong>: Gender: Female
-          </div>
-          <hr style="width:100%" />
-          <div>
-            Rows: {{rowCount}} |
-            Size: {{pageSize}} |
-            Current: {{curPage}} |
-            Offset: {{offset}}
-          </div>
-        </div>
-      </ng-template> -->
-
-<!--       <ng-template 
-      ngx-datatable-footer-template
-      let-rowCount="rowCount"
-      let-pageSize="pageSize"
-      let-selectedCount="selectedCount"
-      let-curPage="curPage"
-      let-offset="offset"
-      let-isVisible="isVisible">
-        <div class="page-count">
-          <span *ngIf="selectedMessage">
-            {{selectedCount.toLocaleString()}} {{selectedMessage}} / 
-          </span>
-          {{rowCount.toLocaleString()}} {{totalMessage}}
-         Rows</div>
-        <datatable-pager
-            [pagerLeftArrowIcon]="'datatable-icon-left'"
-            [pagerRightArrowIcon]="'datatable-icon-right'"
-            [pagerPreviousIcon]="'datatable-icon-prev'"
-            [pagerNextIcon]="'datatable-icon-skip'"
-            [page]="curPage"
-            [size]="pageSize"
-            [count]="rowCount"
-            [hidden]="!((rowCount / pageSize) > 1)"
-            (change)="table.onFooterPage($event)">
-        </datatable-pager>
-    </ng-template> -->
-    <!-- </ngx-datatable-footer> -->
-</ngx-datatable>
-
-
-  <!-- <ion-input clearInput expand='full' placeholder='Filter - Owner || Vehicle No.' [(ngModel)]='filterString' (ngModelChange)='startFilter()' ><ion-icon name="funnel"></ion-icon></ion-input> -->
-  <!--     <ion-list>
-<span>
-<ion-item>Asset Type</ion-item>
-<ion-item>Year of Manufacture</ion-item>
-<ion-item>Owner</ion-item>
-<ion-item>Detailed Vehicle Type</ion-item>
-<ion-item>Serial No.</ion-item>
-<ion-item>Date put into Use</ion-item>
-<ion-item>Vehicle Manu's Code/Vendor Code</ion-item>
-</span>
-</ion-list> -->
-
-  <!--   <ion-list *ngFor='let item of items'>
-<span>
-<ion-item>{{item.assetType}}</ion-item>
-</span>
-</ion-list> -->
-
-  <!--   <table>
-<th>
-<ion-row>
-<ion-col>Asset Type</ion-col>
-<ion-col>Year of Manufacture</ion-col>
-<ion-col>Owner</ion-col>
-<ion-col>Detailed Vehicle Type</ion-col>
-<ion-col>Serial No.</ion-col>
-<ion-col>Date put into Use</ion-col>
-<ion-col>Vehicle Manufactire's Code/Vendor Code</ion-col>
-</ion-row>
-</th>
-</table> -->
-  <!--   <table>
-<ion-list>
-<ion-item>
-<th>
-<ion-row>
-<ion-col>
-<td>Asset Type</td>
-</ion-col>
-<ion-col>
-<td>Year of Manufacture</td>
-</ion-col>
-<ion-col>
-<td>Owner</td>
-</ion-col>
-<ion-col>
-<td>Detailed Vehicle Type</td>
-</ion-col>
-<ion-col>
-<td>Serial No.</td>
-</ion-col>
-<ion-col>
-<td>Date put into Use</td>
-</ion-col>
-<ion-col>
-<td>Vehicle Manufactire's Code/Vendor Code</td>
-</ion-col>
-</ion-row>
-</th>
-</ion-item>
-</ion-list>
-<ion-list *ngFor='let item of itemsAPI'>
-<ion-item>
-<ion-row>
-<tr>
-<ion-col>
-<td>{{item.rardAssetType}}</td>
-</ion-col>
-<ion-col>
-<td>{{item.rardYearOfManufacture}}</td>
-</ion-col>
-<ion-col>
-<td>{{item.rardOwner}}</td>
-</ion-col>
-<ion-col>
-<td>{{item.rardDetailedVehicleType}}</td>
-</ion-col>
-<ion-col>
-<td>{{item.rardSerialNo}}</td>
-</ion-col>
-<ion-col>
-<td>{{item.rardDateUse}}</td>
-</ion-col>
-<ion-col>
-<td>{{item.rardVehicleManufacturerCode}}</td>
-</ion-col>
-</tr>
-</ion-row>
-</ion-item>
-</ion-list>
-</table> -->
-
-
-  <!-- 
-<span    *ngIf='filterEnabled'>
-<ngx-datatable
-
-[rows]="filteredItemsAPI"
-[columns]="columns"
-[scrollbarH]="true"
-[scrollbarV]="true"
-[rowHeight]="50"
-[rowHeight]="'auto'"
-
->
-</ngx-datatable>
-</span> -->
-
-  <!--       <ngx-datatable
-
-[rows]="filteredItemsAPI"
-[columns]="columns"
-[scrollbarH]="true"
-[scrollbarV]="true"
-[rowHeight]="50"
-[rowHeight]="'auto'"
-
->
-
-</ngx-datatable> -->
-
-
-
-
+  <ngx-datatable *ngIf='false' class="material fullscreen striped" [rows]="items" [scrollbarH]="true"
+    [headerHeight]="50" [footerHeight]="30" [rowHeight]="'auto'" [limit]="3">
+    <ngx-datatable-column name="assetType">
+      <ng-template let-value="value" ngx-datatable-cell-template>
+        <strong>{{value}}</strong>
+      </ng-template>
+    </ngx-datatable-column>
+    <ngx-datatable-column name="yearOfManufacture"><strong>{{value}}</strong></ngx-datatable-column>
+    <ngx-datatable-column name="owner"><strong>{{value}}</strong></ngx-datatable-column>
+    <ngx-datatable-column name="detailedVehicleType"><strong>{{value}}</strong></ngx-datatable-column>
+    <ngx-datatable-column name="serialNumber"><strong>{{value}}</strong></ngx-datatable-column>
+    <ngx-datatable-column name="datePutIntoUse"><strong>{{value}}</strong></ngx-datatable-column>
+    <ngx-datatable-column name="vendorCode"><strong>{{value}}</strong></ngx-datatable-column>
+  </ngx-datatable>
 
 </ion-content>
 
@@ -323,7 +103,7 @@
     <ion-button (click)='makeExcel()' [disabled]='searchedItems.length<1'>
       <ion-icon name="arrow-round-down"></ion-icon>
     </ion-button>
-    <ion-button type="submit" (click)='onSubmit(formGroup)' [disabled]='!formGroup.valid'>
+    <ion-button type="submit" (click)='onSubmit(formGroup)' [disabled]='!formGroup.valid && !showResults'>
       <ion-icon name="search"></ion-icon>
     </ion-button>
   </ion-toolbar>
