--- a/demos/src/app/app.component.html
+++ b/demos/src/app/app.component.html
@@ -1,9 +1,7 @@
 <ion-app>
-
   <ion-menu side="end" menuId="first" contentId='first'>
     <ion-header>
       <ion-toolbar color="primary">
-
         <!-- <ion-icon (click)='close()' side='end' name="close"></ion-icon> -->
         <span (click)='close()'>
           <ion-title>
@@ -25,4 +23,20 @@
 
   <ion-router-outlet></ion-router-outlet>
   <ion-router-outlet id='first'></ion-router-outlet>
+
+  <ion-split-pane when='sm' contentId="menu-content">
+    <!--  our side menu  -->
+    <ion-menu contentId="menu-content">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+    </ion-menu>
+
+    <!-- the main content -->
+    <ion-router-outlet id="menu-content"></ion-router-outlet>
+  </ion-split-pane>
+
+
 </ion-app>
