--- a/demos/src/app/view-assets/view-assets.page.html
+++ b/demos/src/app/view-assets/view-assets.page.html
@@ -9,39 +9,79 @@
 
 <ion-content padding>
 
-    <span (click)='hideAtLeastOneMsg()'>
-        <ion-item lines='none'
-          *ngIf='formGroup.touched && !formGroup.valid && !userHasCancelled &&!(formGroup.controls["dateUseRangeEnd"].value!=="" && formGroup.controls["dateUseRangeStart"].value==="" )'>
-          <!-- this should not show when date range error is there -->
-          <ion-label color="danger">
-            Input for at least one field is required.
-          </ion-label>
-          <ion-icon name='close'></ion-icon>
-        </ion-item>
-      </span>
+  <span (click)='hideAtLeastOneMsg()'>
+    <ion-item lines='none'
+      *ngIf='formGroup.touched && !formGroup.valid && !userHasCancelled &&!(formGroup.controls["dateUseRangeEnd"].value!=="" && formGroup.controls["dateUseRangeStart"].value==="" )'>
+      <!-- this should not show when date range error is there -->
+      <ion-label color="danger">
+        Input for at least one field is required.
+      </ion-label>
+      <ion-icon name='close'></ion-icon>
+    </ion-item>
 
-      <div id="custom-overlay" [style.display]="showSearchingOverlay ? 'flex': 'none'">
-          <div class="flb">
-            <div class="lds-ellipsis">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
-          </div>
-        </div>
+
+  </span>
+
+  <div id="custom-overlay" [style.display]="showSearchingOverlay ? 'flex': 'none'">
+    <div class="flb">
+      <div class="lds-ellipsis">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </div>
 
   <form novalidate [formGroup]="formGroup" *ngIf='!showResults'>
-    <ion-input clearInput type="text" formControlName="serialNo" placeholder="Serial No."></ion-input>
 
-    <ion-input clear-input='true' type="text" formControlName="owner" placeholder="Owner"></ion-input>
 
-    <!-- <ion-input clearInput type="text" formControlName="rardDetailedVehicleType" placeholder="Detailed Vehicle Type | F"></ion-input> -->
 
-    <ion-input clearInput type="text" formControlName="assetType" placeholder="Asset Type"></ion-input>
+    <ion-item lines='none'>
+      <ion-label>Serial No.</ion-label>
 
-    <ion-input clearInput type="text" formControlName="yearOfManufacture" placeholder="Year of Manufacture | YY ">
-    </ion-input>
+      <ion-input (keypress)="numberOnly($event)" clearInput type="text" formControlName="serialNo" placeholder="of 6 Digits only."></ion-input>
+    </ion-item>
+<!--     <ion-item lines='none'>
+      <ion-label>Owner</ion-label>
+      <ion-input clear-input='true' type="text" formControlName="owner" placeholder="should be 2, 3 or 4 letters. ">
+      </ion-input>
+    </ion-item> -->
+    <ion-item lines='none'>
+      <ion-label>Owner</ion-label>
+      <ion-select formControlName="owner" interface="popover"
+        placeholder="Select One">
+        <ion-select-option value="{{owner}}" *ngFor='let owner of uniqueOwnersList '>{{owner}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+<!--     <ion-item lines='none'>
+      <ion-label>Vehicle Code</ion-label>
+      <ion-input clearInput type="text" formControlName="vehicleCode" placeholder=""></ion-input>
+    </ion-item> -->
+    <ion-item lines='none'>
+      <ion-label>Vehicle Code</ion-label>
+      <ion-select formControlName="vehicleCode" interface="popover"
+        placeholder="Select One">
+        <ion-select-option value="{{vehicleCode}}" *ngFor='let vehicleCode of uniqueVehiclesCodeList '>{{vehicleCode}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+ <!--    <ion-item lines='none'>
+      <ion-label>Asset Type</ion-label>
+      <ion-input clearInput type="text" formControlName="assetType" placeholder=""></ion-input>
+    </ion-item> -->
+    <ion-item lines='none'>
+      <ion-label>Asset Type</ion-label>
+      <ion-select formControlName="assetType" interface="popover"
+        placeholder="Select One">
+        <ion-select-option value="{{assetType}}" *ngFor='let assetType of uniqueAssetsTypeList '>{{assetType}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item lines='none'>
+      <ion-label>Manufacture Year</ion-label>
+      <ion-input clearInput type="text" formControlName="yearOfManufacture" placeholder="as YY">
+      </ion-input>
+    </ion-item>
 
     <ion-item lines='none'>
       <ion-label>Range</ion-label>
@@ -51,28 +91,32 @@
         <ion-label slot="end">99</ion-label>
       </ion-range>
     </ion-item>
+    <ion-item lines='none'>
+      <ion-label>Date put into Use</ion-label>
 
-    <ion-datetime placeholder="Date put into Use" display-format="DD MMM YYYY" picker-format="DD MMM YYYY"
-      formControlName="dateUse" [pickerOptions]="customOptions"></ion-datetime>
+      <ion-datetime placeholder="" display-format="DD MMM YYYY" picker-format="DD MMM YYYY" formControlName="dateUse"
+        [pickerOptions]="customOptions"></ion-datetime>
 
-    <span>
-      <ion-item lines='none'
-        *ngIf='formGroup.touched && (formGroup.controls["dateUseRangeEnd"].value!=="" && formGroup.controls["dateUseRangeStart"].value==="" )'>
-        <ion-label color="danger">
-          Start Date Required with End Date.
-        </ion-label>
-        <ion-icon name='close'></ion-icon>
-      </ion-item>
-    </span>
+      <span>
+        <ion-item lines='none'
+          *ngIf='formGroup.touched && (formGroup.controls["dateUseRangeEnd"].value!=="" && formGroup.controls["dateUseRangeStart"].value==="" )'>
+          <ion-label color="danger">
+            Start Date Required with End Date.
+          </ion-label>
+          <ion-icon name='close'></ion-icon>
+        </ion-item>
+      </span>
+    </ion-item>
 
     <ion-item lines='none' [disabled]='formGroup.controls["dateUse"].value!==""'>
       <ion-label>Range</ion-label>
       <ion-datetime placeholder='Start Date' formControlName="dateUseRangeStart"></ion-datetime>
       <ion-datetime placeholder='End Date' formControlName="dateUseRangeEnd"></ion-datetime>
     </ion-item>
-
-    <ion-input clearInput type="text" formControlName="gs1CompanyCode" placeholder="Vehicle Manufactire's Code/Vendor Code"></ion-input>
-
+    <ion-item lines='none'>
+      <ion-label>Vehicle Type</ion-label>
+      <ion-input clearInput type="text" formControlName="vehicleType" placeholder=""></ion-input>
+    </ion-item>
     <ion-row style="height: 30px"></ion-row>
   </form>
 
