--- a/demos/src/app/view-assets/view-assets.page.html
+++ b/demos/src/app/view-assets/view-assets.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Assets
+    <ion-title>Assets {{items.length}}
       <span (click)='hideAtLeastOneMsg()' *ngIf='formGroup.touched && !formGroup.valid && !userHasCancelled'>
         <ion-icon name='close'></ion-icon>
         <ion-label color="danger">
@@ -50,6 +50,7 @@
       </ion-input>
     </ion-item> -->
     <ion-item lines='none'>
+      
       <ion-label>Owner</ion-label>
       <ion-select formControlName="owner" interface="popover" placeholder="Select One">
         <ion-select-option value="{{owner}}" *ngFor='let owner of uniqueOwnersList '>{{owner}}</ion-select-option>
@@ -96,9 +97,6 @@
         <ion-label slot="start">00</ion-label>
         <ion-label slot="end">99</ion-label>
       </ion-range>
-      <span *ngIf="formGroup.controls['yearOfManufactureRange'].invalid">
-        <ion-label color='danger'>Upper Can't be 0</ion-label>
-      </span>
     </ion-item>
     <ion-item lines='none'>
       <ion-label>Date put into Use</ion-label>
@@ -137,7 +135,7 @@
   </ngx-datatable>
 
   <ngx-datatable *ngIf='false' class="material fullscreen striped" [rows]="items" [scrollbarH]="true"
-    [headerHeight]="50" [footerHeight]="30" [rowHeight]="'auto'" [limit]="3">
+    [headerHeight]="50" [footerHeight]="30" [rowHeight]="'auto'" [limit]='2'>
     <ngx-datatable-column name="assetType">
       <ng-template let-value="value" ngx-datatable-cell-template>
         <strong>{{value}}</strong>
@@ -151,6 +149,18 @@
     <ngx-datatable-column name="vendorCode"><strong>{{value}}</strong></ngx-datatable-column>
   </ngx-datatable>
 
+  <ion-item *ngFor='let item of items '>
+    {{item.assetType}}
+  </ion-item>
+
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
 
 <ion-footer no-border text-center>
@@ -158,7 +168,7 @@
     <ion-button (click)='makeExcel()' [disabled]='searchedItems.length<1'>
       <ion-icon name="arrow-round-down"></ion-icon>
     </ion-button>
-    <ion-button type="submit" (click)='onSubmit(formGroup)' [disabled]='!formGroup.valid && !showResults'>
+    <ion-button type="submit" (click)='onSubmit()' [disabled]='!formGroup.valid && !showResults'>
       <ion-icon name="search"></ion-icon>
     </ion-button>
   </ion-toolbar>
